--- a/Mobile/electronic_equipment_store/pubspec.yaml
+++ b/Mobile/electronic_equipment_store/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.0.5
   flutter_spinkit: ^5.2.0
+  salomon_bottom_bar: ^3.3.2
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
