--- a/Mobile/electronic_equipment_store/pubspec.yaml
+++ b/Mobile/electronic_equipment_store/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   flutter_spinkit: ^5.2.0
   salomon_bottom_bar: ^3.3.2
   font_awesome_flutter: ^10.5.0
+  auto_size_text: ^3.0.0
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
+  photo_view: ^0.14.0 
+  expandable_text: ^2.3.0
+
 
 dev_dependencies:
   flutter_test:
