--- a/Mobile/electronic_equipment_store/pubspec.yaml
+++ b/Mobile/electronic_equipment_store/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   photo_view: ^0.14.0 
   expandable_text: ^2.3.0
+  http: ^1.1.0
+
 
 
 dev_dependencies:
