--- a/FE/electric_store/package.json
+++ b/FE/electric_store/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.25",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "html-react-parser": "^5.1.10",
     "install": "^0.13.0",
     "npm": "^10.5.2",
