--- a/FE/electric_store_admin/package.json
+++ b/FE/electric_store_admin/package.json
@@ -15,15 +15,23 @@
     "@mui/material": "^5.13.7",
     "@mui/x-data-grid": "^6.9.2",
     "@tanstack/react-query": "^4.29.19",
+    "@types/chart.js": "^2.9.41",
+    "@types/react-redux": "^7.1.33",
+    "axios": "^1.6.8",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.14.1",
     "recharts": "^2.7.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.63.6"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
