--- a/BE/SWP391 BL3W/appsettings.json
+++ b/BE/SWP391 BL3W/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ElectricStore": "server=localhost;database=ElectricStore;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "ElectricStore": "server=SE130658\\SQLEXPRESS;database=ElectricStore;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
