--- a/FE/electric_store_admin/package.json
+++ b/FE/electric_store_admin/package.json
@@ -18,6 +18,7 @@
     "@types/chart.js": "^2.9.41",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -30,6 +31,7 @@
     "sass": "^1.63.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
