--- a/FE/electric_store_admin/package.json
+++ b/FE/electric_store_admin/package.json
@@ -12,24 +12,30 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.13.7",
     "@mui/x-data-grid": "^6.9.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^4.29.19",
     "@types/chart.js": "^2.9.41",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
+    "jsx": "^0.9.89",
+    "jx": "^0.1.3",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.22.3",
     "recharts": "^2.7.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
