--- a/FE/electric_store_admin/tsconfig.json
+++ b/FE/electric_store_admin/tsconfig.json
@@ -5,9 +5,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "src",
+    "sourceMap": true,
+    "outDir": "dist",
+    "moduleResolution": "node",
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
