--- a/BE/SWP391 BL3W/appsettings.json
+++ b/BE/SWP391 BL3W/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ElectricStore": "data source=35.186.148.127;initial catalog=electronicDb;user id=sa;password=yourStrong1@Password;trustservercertificate=true;multipleactiveresultsets=true;"
-    //"ElectricStore": "server=localhost;database=ElectricStore;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    //"ElectricStore": "data source=pacific1.database.windows.net;initial catalog=epplus;user id=sa1;password=be12345@;trustservercertificate=true;multipleactiveresultsets=true;"
+    "ElectricStore": "server=localhost;database=ElectricStore;uid=sa;pwd=12345;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
